# CMakeList.txt : CMake project for chapter6_calc, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("chapter6_calc")

# Add source to this project's executable.
add_executable (chapter6_calc "chapter6_calc.cpp" "chapter6_calc.h")

# TODO: Add tests and install targets if needed.
